[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/GFX/Projectiles/bullet1/1-01.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/UI/panel.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/UI/blue_button02.png" type="Texture" id=3]
[ext_resource path="res://Assets/GFX/Projectiles/pill_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/Projectiles/bullet2/1-01.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/Backpack.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 256 )

[node name="Backpack" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -180.0
margin_right = 325.0
margin_bottom = 180.0
rect_min_size = Vector2( 650, 360 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -15.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemText" type="VBoxContainer" parent="Background/HBoxContainer"]
margin_right = 300.0
margin_bottom = 280.0
rect_min_size = Vector2( 300, 280 )

[node name="ItemName" type="RichTextLabel" parent="Background/HBoxContainer/ItemText"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[b]Green Pill[/b]"
text = "Green Pill"

[node name="ItemDescription" type="RichTextLabel" parent="Background/HBoxContainer/ItemText"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 104.0
rect_min_size = Vector2( 270, 50 )

[node name="ItemGrid" type="GridContainer" parent="Background/HBoxContainer"]
margin_left = 304.0
margin_right = 501.0
margin_bottom = 280.0
rect_min_size = Vector2( 190, 150 )
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 3

[node name="Slot0" type="Panel" parent="Background/HBoxContainer/ItemGrid"]
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 55 )
custom_styles/panel = SubResource( 2 )

[node name="Selected" type="TextureRect" parent="Background/HBoxContainer/ItemGrid/Slot0"]
visible = false
self_modulate = Color( 1, 0.788235, 0.788235, 1 )
margin_right = 55.0
margin_bottom = 55.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue Pill" type="TextureRect" parent="Background/HBoxContainer/ItemGrid/Slot0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -17.5
margin_right = 8.0
margin_bottom = 17.5
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/HBoxContainer/ItemGrid/Slot0"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "green"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="Background/HBoxContainer/ItemGrid"]
margin_left = 71.0
margin_right = 126.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 55 )
custom_styles/panel = SubResource( 2 )

[node name="Selected" type="TextureRect" parent="Background/HBoxContainer/ItemGrid/Slot1"]
visible = false
self_modulate = Color( 1, 0.788235, 0.788235, 1 )
margin_right = 55.0
margin_bottom = 55.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red Pill" type="TextureRect" parent="Background/HBoxContainer/ItemGrid/Slot1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -17.5
margin_right = 8.0
margin_bottom = 17.5
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/HBoxContainer/ItemGrid/Slot1"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "red"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="Background/HBoxContainer/ItemGrid"]
margin_left = 142.0
margin_right = 197.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 55 )
custom_styles/panel = SubResource( 2 )

[node name="Selected" type="TextureRect" parent="Background/HBoxContainer/ItemGrid/Slot2"]
visible = false
self_modulate = Color( 1, 0.788235, 0.788235, 1 )
margin_right = 55.0
margin_bottom = 55.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Green Pill" type="TextureRect" parent="Background/HBoxContainer/ItemGrid/Slot2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -17.5
margin_right = 8.0
margin_bottom = 17.5
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0001
margin_top = 20.0
margin_right = -30.0001
margin_bottom = 40.0
text = "X"
[connection signal="pressed" from="Background/ExitButton" to="." method="_on_ExitButton_pressed"]
